<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Eurofurence Wifi Setup</string>

	<string name="TITLE_LOGON">Please logon</string>
	<string name="wpa_identity_hint">Access ID</string>
	<string name="wpa_password_hint">Password</string>
	<string name="Logon">Connect to WiFi</string>

	<string name="fediverse">https://chaos.social/@c3noc</string>

	<string name="c5ghz">This device supports the 5GHz band</string>
	<string name="l5ghz">(Unfortunately, autodetecting 5GHz support is broken&#8230;)</string>
	<string name="lkeystore">Note: if you have no screen lock, Android refuses to store the security settings!</string>

	<string name="qr_button">Auto-config via QR</string>
	<string name="qr_overlay_text">Scan to connect to WiFi</string>
	
	<string name="chooseprofile">or choose your connection profile:</string>
	<string name="profile_select">Select profile</string>
	<string name="ABOUT_TITLE">About</string>
	<string name="EXIT_TITLE">Exit</string>
		
	<string name="ABOUT_CONTENT">This small helper app creates a Wifi connection entry for the CCC/EMF/EF/… networks.  It configures the correct SSL CA and subject name match, making it a little more secure than a hand-created entry.

	</string>
	<string name="LOGO">Eurofurence Logo</string>
    <string name="about_source_url">https://github.com/eurofurence/wifisetup</string>
	<string name="about_imprint_url">https://help.eurofurence.org/legal/imprint</string>
	<string name="app_short_name">Wifi Setup</string>
</resources>
