<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/viewflipper"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context=".WifiSetup"
	>
<ScrollView
	android:id="@+id/FirstView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

<LinearLayout
	android:id="@+id/logonLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:gravity="center_horizontal|top"
	android:orientation="vertical">

	<ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
		android:layout_height="200dp"
		android:contentDescription="@string/LOGO"
		android:padding="0dp"
		android:scaleType="fitCenter"
		android:src="@drawable/ef29c" />

	<!--<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:autoLink="web"
		android:text="@string/fediverse"/>-->

	<!--<CheckBox android:id="@+id/check5g"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/c5ghz"/>-->
	<TextView
		android:id="@+id/labelkeystore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:text="@string/lkeystore"
		android:textAlignment="center" />
	<TextView
		android:id="@+id/labelprofile"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/chooseprofile" />
	<Spinner
		android:id="@+id/profile"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:prompt="@string/profile_select"
		android:entries="@array/profiles_array"
		/>

	<LinearLayout
		android:id="@+id/logindata"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal|top"
		android:orientation="vertical"
		android:visibility="gone">

        <EditText
			android:id="@+id/username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:ems="10"
			android:hint="@string/Username"
			android:inputType="textEmailAddress"
			android:padding="5dp"
			>
		</EditText>

		<EditText
			android:id="@+id/password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:ems="10"
			android:hint="@string/Password"
			android:inputType="textPassword"
			android:padding="5dp"
			/>
	</LinearLayout>

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="15dp"
		android:text="@string/Logon" />

	<Space
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		/>
</LinearLayout>
</ScrollView>

		<LinearLayout
			android:id="@+id/logonLayout2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:orientation="vertical"
			>
			<TextView
				android:id="@+id/resulttitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="15dp"
				android:textAlignment="center"
				android:textSize="24sp"
				/>
			<TextView
				android:id="@+id/result"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="15sp"
				android:textAlignment="center"
				/>
		</LinearLayout>
</ViewFlipper>
