<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/about_app_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/LOGO"
        android:src="@drawable/event_logo"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/about_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display1" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ABOUT_CONTENT"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/about_source_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A5953"
        android:text="Source Code" />

    <Button
        android:id="@+id/about_imprint_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7ec2c6"
        android:text="Imprint" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/about_version_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

</LinearLayout>